--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>rajandini</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, et.</p>
 </body>
 </html>
